-
Question/Request
-
Resolution: Fixed
-
Minor
-
Lustre 2.12.5
-
None
-
9223372036854775807
On a client when you load lustre module /proc/filesystem doesn't show lustre as nodev. How can we set the nodev option in /proc/filesystem.
We can mount the filesystem using nodev. Like this.
mount -t lustre -o flock,nodev,nosuid,noauto servernid@o2ib:/fs1 /fs1
# cat /proc/filesystems | grep lustre lustre
bash-4.3# modinfo lustre filename: /lib/modules/4.12.14-122.23.1.20200609-nasa/updates/lustre-client/fs/lustre.ko license: GPL version: 2.12.5 description: Lustre Client File System author: OpenSFS, Inc. <http://www.lustre.org/> suserelease: SLE12-SP5 srcversion: 39FF3FF008B210E74B8D7D7 depends: obdclass,ptlrpc,libcfs,lnet,lmv,mdc,lov retpoline: Y vermagic: 4.12.14-122.23.1.20200609-nasa SMP mod_unload modversions
- is related to
-
LU-12514 separate out the lustre mount code for server and clients
-
- Open
-