lustre/obdclass/obd_mount.c
@@ -1675,7 +1675,12 @@ static struct file_system_type lustre_fs_type = {
         .get_sb       = lustre_get_sb,
 #endif
         .kill_sb      = lustre_kill_super,
-	.fs_flags     = FS_REQUIRES_DEV | FS_HAS_FIEMAP | FS_RENAME_DOES_D_MOVE,
+	.fs_flags     = FS_HAS_FIEMAP | FS_RENAME_DOES_D_MOVE |
+#ifdef HAVE_SERVER_SUPPORT
+			FS_REQUIRES_DEV,
+#else
+			0,
+#endif
 };
 MODULE_ALIAS_FS("lustre");
 
